--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <hr>
 
       <footer>
-        <p>&copy; 2015 Company, Inc.</p>
+        Contact us at no.44 jalan ss14/5B<p>&copy; 2015 Company, Inc.</p>
       </footer>
     </div> <!-- /container -->
 
